# cantera-helper

./: README.md  pyproject.toml
example/: .gitignore  concentration.csv  full_cyclopentane_chem.yaml  run.py
example/o2_sweep/: .gitignore  README.md  concentrations.csv  run.py  species.csv
example/o2_sweep1/: concentrations.csv  results.csv  species.csv  submit.sh
example/o2_sweep2/: results.csv  run.py  species.csv  submit.sh
example/o2_sweep3/: .gitignore  results.csv  run.ipynb  run.py
example/o2_sweep_new_model/: run.ipynb  run.py
src/cantera_helper/: reactors.py
