[project]
authors = [{name = "Andreas Copan", email = "avcopan@gmail.com"}]
dependencies = []
description = "Add a short description here"
name = "cantera-helper"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
cantera_helper = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
cantera = "*"
polars = "*"
altair-all = "*"
numpy = "*"
jupyter = ">=1.1.1,<2"
